fixed the weird stretching bug, but still no exif rotation in the overlay...

--- a/resources/style3.css
+++ b/resources/style3.css
@@ -42,7 +42,6 @@
 }
 .lb-overlay a.lb-close{
 	z-index: 999;
-	color: #fff;
 	position: absolute;
 	top: 43px;
 	left: 50%;
